# riley-colon-case

./: .gitignore  CMakeLists.txt  README.md
ColonCase/: ColonCase.sln
ColonCase/ColonCaseGame/: ColonCaseGame.vcxproj  ColonCaseGame.vcxproj.filters
ColonCase/ColonCaseGame/licences/: readme.txt
ColonCase/ColonCaseGame/resources/campaigns/colon-case/: colon-case.tiled-session
ColonCase/ColonCaseGame/src/main/: colon-case-main.cpp  r3-colonCase-GameClient.cpp  r3-colonCase-client.hpp
ColonCase/ColonCaseGame/src/main/gameplay/: GameMapRenderer.cpp  r3-colonCase-CompassDirectionUtils.cpp  r3-colonCase-GameMapRenderUtils.cpp  r3-colonCase-GameplayKeyboardEventUtils.cpp  r3-colonCase-GameplaySceneController.cpp  r3-colonCase-gameplay.hpp
ColonCase/ColonCaseGame/src/main/json/: jsoncpp.cpp  r3-jsoncpp-JsonLoaderUtils.cpp  r3-jsoncpp-JsonValidationUtils.cpp  r3-jsoncpp-utils.hpp
ColonCase/ColonCaseGame/src/main/level-data/: r3-colonCase-AssetLoadingTracker.cpp  r3-colonCase-AssetManager.cpp  r3-colonCase-AssetManager.hpp  r3-colonCase-GameLoaderUtils.cpp  r3-colonCase-GameMap.cpp  r3-colonCase-GameMap.hpp  r3-colonCase-GameMapLayer.cpp  r3-colonCase-GameMapSprite.cpp  r3-colonCase-GameSpriteImage.cpp  r3-colonCase-GameSpriteTile.cpp  r3-colonCase-JsonGameLoader.hpp  r3-colonCase-JsonGameMapLoader.cpp  r3-colonCase-levelDefn.hpp
ColonCase/ColonCaseGame/src/main/sfml-utils/: r3-sfml-utils.cpp
ColonCase/ColonCaseGame/src/main/splash-screen/: r3-colonCase-MainMenu.cpp  r3-colonCase-MainMenuFactory.cpp  r3-colonCase-MainMenuUiUtils.cpp  r3-colonCase-SplashSceneController.cpp  r3-colonCase-SplashSceneRenderer.cpp  r3-colonCase-mainMenu.hpp  r3-colonCase-splashScreen.hpp
ColonCase/ColonCaseGame/src/main/tiled/: r3-tiled-CustomPropertyDefnUtils.cpp  r3-tiled-JsonCustomPropertyLoader.cpp  r3-tiled-JsonLoader.cpp  r3-tiled-JsonLoader.hpp  r3-tiled-JsonMapLayerLoader.cpp  r3-tiled-JsonMapLayerObjectLoader.cpp  r3-tiled-JsonMapLayerObjectPointLoader.cpp  r3-tiled-JsonMapLoader.cpp  r3-tiled-JsonMapTilesetLoader.cpp  r3-tiled-JsonTilesetImageLoader.cpp  r3-tiled-JsonTilesetLoader.cpp  r3-tiled-JsonTilesetTileLoader.cpp  r3-tiled-MapLayerObjectTypeUtils.cpp  r3-tiled-defn.hpp
ColonCase/ColonCaseGame/src/main/validation/: r3-validation-IntRange.cpp  r3-validation-utils.hpp
ColonCase/ColonCaseGame/src/test/json/: r3-jsoncpp-JsonLoaderUtilsTests.cpp  r3-jsoncpp-JsonLoaderUtilsTests.hpp  r3-jsoncpp-JsonValidationUtilsTest.hpp  r3-jsoncpp-JsonValidationUtilsTests.cpp  r3-jsoncpp-test-main.cpp
ColonCase/ColonCaseGame/src/test/level-data/: r3-colonCase-AssetLoadingStatusTests.cpp  r3-colonCase-AssetLoadingTrackerTests.cpp  r3-colonCase-AssetManagerTests.cpp  r3-colonCase-AssetManagerTests.hpp  r3-colonCase-GameLoaderUtilsTest.hpp  r3-colonCase-GameLoaderUtilsTests.cpp  (+6 more)
ColonCase/ColonCaseJsonLoaderTestProject/: ColonCaseJsonLoaderTestProject.vcxproj  ColonCaseJsonLoaderTestProject.vcxproj.filters
ColonCase/ColonCaseLevelAssetTestProject/: ColonCaseLevelAssetTestProject.vcxproj  ColonCaseLevelAssetTestProject.vcxproj.filters
ColonCase/JsonUtilsTestProject/: JsonUtilsTestProject.vcxproj  JsonUtilsTestProject.vcxproj.filters
ColonCase/JsonUtilsTestProject/resources/: invalid.json  valid.json
ColonCase/TiledJsonLoaderTestProject/: TiledJsonLoaderTestProject.vcxproj  TiledJsonLoaderTestProject.vcxproj.filters
ColonCase/TiledJsonLoaderTestProject/resources/: invalid_json.json  invalid_map.json  invalid_tileset.json  valid_map.json  valid_tileset.json
ColonCase/ValidationUtilsTestProject/: ValidationUtilsTestProject.vcxproj  ValidationUtilsTestProject.vcxproj.filters
artwork/textures/floors/: carpet-plain-tan-color.xcf
dependencies/json-cpp/: CMakeLists.txt
dependencies/riley-cpp-utils/: CMakeLists.txt
dependencies/riley-json-cpp-utils/: CMakeLists.txt
dependencies/riley-sfml-utils/: CMakeLists.txt
dependencies/riley-tiled-json-loader/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
include/r3/colon-case/gameplay/: r3-colonCase-gameplay.hpp
include/r3/colon-case/level-data/: r3-colonCase-AssetManager.hpp  r3-colonCase-GameMap.hpp  r3-colonCase-JsonDictionaryLoader.hpp  r3-colonCase-JsonGameLoader.hpp  r3-colonCase-levelDefn.hpp
include/r3/colon-case/sfml-utils/: r3-sfml-utils.hpp
include/r3/colon-case/splash-screen/: r3-colonCase-splashScreen.hpp
licences/: readme.txt
src/main/r3/colon-case/: CMakeLists.txt  colon-case-main.cpp  r3-colonCase-GameClient.cpp
src/main/r3/colon-case/gameplay/: GameMapRenderer.cpp  r3-colonCase-CompassDirectionUtils.cpp  r3-colonCase-GameMapRenderUtils.cpp  r3-colonCase-GameplayKeyboardEventUtils.cpp  r3-colonCase-GameplaySceneController.cpp
src/main/r3/colon-case/level-data/: r3-colonCase-AssetLoadingTracker.cpp  r3-colonCase-AssetManager.cpp  r3-colonCase-GameLoaderUtils.cpp  r3-colonCase-GameMap.cpp  r3-colonCase-GameMapLayer.cpp  r3-colonCase-GameMapObject.cpp  r3-colonCase-GameMapSprite.cpp  r3-colonCase-GameSpriteImage.cpp  r3-colonCase-GameSpriteTile.cpp  r3-colonCase-JsonDictionaryLoader.cpp  r3-colonCase-JsonGameMapLoader.cpp
src/main/r3/colon-case/sfml-utils/: r3-sfml-utils.cpp
src/main/r3/colon-case/splash-screen/: r3-colonCase-MainMenu.cpp  r3-colonCase-MainMenuFactory.cpp  r3-colonCase-MainMenuUiUtils.cpp  r3-colonCase-SplashSceneController.cpp  r3-colonCase-SplashSceneRenderer.cpp
src/resources/campaigns/colon-case/: dictionary.json
src/test/r3/colon-case/level-data/AssetLoadingStatusTests/: AssetLoadingStatusTests-main.cpp  CMakeLists.txt
src/test/r3/colon-case/level-data/AssetManagerTests/: AssetManagerTests-main.cpp  CMakeLists.txt
src/test/r3/colon-case/level-data/GameLoaderUtilsTests/: CMakeLists.txt  GameLoaderUtilsTests-main.cpp
src/test/r3/colon-case/level-data/GameMapTests/: CMakeLists.txt  GameMapObjectTests-main.cpp  GameMapTests-main.cpp
src/test/r3/colon-case/level-data/JsonDictionaryLoaderTests/: CMakeLists.txt  JsonDictionaryLoaderTests-main.cpp
src/test/r3/colon-case/level-data/JsonGameMapLoaderTests/: CMakeLists.txt  JsonGameMapLoaderTests-main.cpp
(+44 files in other folders)
